<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndCourier Client 1.0</string>
    <string name="firstRun">As this is the first time you run this application, you need to feel up following information</string>
    <string name="hostAddress">AndCourier Server address:</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="savingHost">Saving host address</string>
    <string name="addressFirst">You have to enter host address first</string>
    <string name="incorrectAddress">The address you entered is not correct</string>
    <string name="failedSaveAddress">Failed to save host address</string>
    <string name="failedReadAddress">Failed to read host address</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="loggingin">Logging in...</string>
    <string name="loginFirst">You have to enter your login before proceeding</string>
    <string name="passwordFirst">You have to enter your password before proceeding</string>
    <string name="incorrectCredentials">The login or password you entered are not correct</string>
    <string name="communicationFail">The server you\'re trying to reach is not responding</string>
	<string name="changeAddress">Change server address</string>
	<string name="failedSaveLogin">Failed to save your login</string>
	<string name="unsigned_parcels">Unassigned parcels</string>
    <string name="signed_parcels">My parcels</string>
    <string name="signed_undelievered">My undelievered parcels</string>
    <string name="loadingData">Loading data...</string>
    <string name="loadingDataFailed">Failed to load the data</string>
    <string name="type">Type</string>
    <string name="city">City</string>
    <string name="weight">Weight</string>
    <string name="addressedTo">Addressed to:</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="postalCode">Postal code</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="apartment">Apartment</string>
    <string name="sentOn">Sent on</string>
    <string name="price">Price</string>
    <string name="assignToMe">Assign to me</string>
    <string name="assigning">Assigning...</string>
    <string name="parcelAssigned">Parcel assigned</string>
    <string name="failedToAssign">Failed to assign parcel</string>
    <string name="unreachableHost">The host you\'re trying to reach is unavailable</string>
    <string name="deliver">Deliver</string>
    <string name="delivering">Delivering...</string>
    <string name="errorDataRetrival">Error occured while retrievin the data</string>
    <string name="parcelDelivered">Delivered</string>
    <string name="failedToDeliver">Failed to change status of a parcel to delivered</string>
</resources>