<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/firstRunText"
        android:text="@string/firstRun"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_marginTop="15dip"
        android:text="@string/hostAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textHostAddress" />
    </LinearLayout>
    
    <Button
        android:layout_gravity="bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="saveClicked"
        android:text="@string/save" />
</FrameLayout>