<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:layout_gravity="center"
      android:src="@drawable/ic_launcher"/>
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_weight="2"
    	android:orientation="horizontal"
    >
        <Button
            android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_weight="1"
    		android:text="@string/unsigned_parcels"
    		android:onClick="showUnassigned"
            />
        <Button
            android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_weight="1"
    		android:text="@string/signed_parcels"
    		android:onClick="showAllParcels"
            />
    </LinearLayout>

        <Button
            android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_weight="2"
    		android:text="@string/signed_undelievered"
    		android:onClick="showMyParcels"
            />
</LinearLayout>